project helper - removed as many references as possible