@@ -1,6 +1,5 @@
 package com.apphance.ameba.applyPlugins.android
 
-import com.apphance.ameba.ProjectHelper
 import org.gradle.tooling.BuildLauncher
 import org.gradle.tooling.GradleConnector
 import org.gradle.tooling.ProjectConnection
@@ -9,6 +8,9 @@ import org.junit.Before
 import org.junit.Test
 
 class TestRobolectricTasks {
+
+    public static final String[] GRADLE_DAEMON_ARGS = ['-XX:MaxPermSize=1024m', '-XX:+CMSClassUnloadingEnabled',
+            '-XX:+CMSPermGenSweepingEnabled', '-XX:+HeapDumpOnOutOfMemoryError', '-Xmx1024m'] as String[]
 
     private static File conventionsBase = new File('testProjects/android/android-robolectric-test');
     private static File roboPath = new File(conventionsBase.path + '/test/robolectric')
@@ -33,13 +35,13 @@ class TestRobolectricTasks {
         ProjectConnection connection = getProjectConnection(conventionsBase, "")
         try {
             BuildLauncher bl = connection.newBuild().forTasks('prepareRobolectric');
-            bl.setJvmArguments(ProjectHelper.GRADLE_DAEMON_ARGS)
+            bl.setJvmArguments(GRADLE_DAEMON_ARGS)
             bl.run()
 
             bl = connection.newBuild().forTasks('testRobolectric');
             ByteArrayOutputStream baos = new ByteArrayOutputStream()
             bl.setStandardOutput(baos)
-            bl.setJvmArguments(ProjectHelper.GRADLE_DAEMON_ARGS)
+            bl.setJvmArguments(GRADLE_DAEMON_ARGS)
             bl.run()
             String output = baos.toString('utf-8')
             assert output.contains("Running test: test myFirstRobolectricTest(com.apphance.amebaTest.android.MyFirstTest)")
